fix home messagebox postslist alignment

--- a/components/PostsPage/Posts/Posts.module.scss
+++ b/components/PostsPage/Posts/Posts.module.scss
@@ -1,5 +1,3 @@
 .container {
   width: 841px;
-  position: absolute;
-  left: 287px;
 }
