--- a/components/PostsPage/Posts/PostsList/PostsList.module.scss
+++ b/components/PostsPage/Posts/PostsList/PostsList.module.scss
@@ -1,4 +1,6 @@
 .container {
   width: 841px;
-  margin: 24px 0 0 4px;
+  position: absolute;
+  left: 287px;
+  top: 80px;
 }
